fix(resource): fix resource image shift issue

--- a/src/app/resources/landing/landing.component.scss
+++ b/src/app/resources/landing/landing.component.scss
@@ -97,12 +97,12 @@
   }
 }
 
-.landing__prepare {
-  background-image: url("https://hsk-landing.s3-us-west-2.amazonaws.com/resources/download/prepare_test_pic.png");
+.landing__smart {
+  background-image: url("https://hsk-landing.s3-us-west-2.amazonaws.com/resources/smart/web/index_pic_web.png");
   background-size: cover;
   @media (max-width: 991.98px) {
     height: calc(70vh - 65px);
-    background-image: url("https://hsk-landing.s3-us-west-2.amazonaws.com/resources/download/prepare_test_pic_phone.png");
+    background-image: url("https://hsk-landing.s3-us-west-2.amazonaws.com/resources/smart/mobile/index_pic_phone.png");
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -116,5 +116,15 @@
       font-size: 32px;
       line-height: 42px;
     }
+  }
+}
+.landing__prepare{
+  background-image: url("https://hsk-landing.s3-us-west-2.amazonaws.com/resources/download/prepare_test_pic.png");
+  background-size: cover;
+  @media (max-width: 991.98px) {
+    height: calc(70vh - 65px);
+    background-image: url("https://hsk-landing.s3-us-west-2.amazonaws.com/resources/download/prepare_test_pic_phone.png");
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 }
